--- a/server/frontend/static/style.css
+++ b/server/frontend/static/style.css
@@ -1,10 +1,11 @@
+
 img{
   width: 60%;
   align-self: center;
 }
 
 .card{
-  border: rgb(103, 102, 105) 3px solid;
+  border: rgb(13, 124, 199) 3px;
   display: flex;  
   flex-direction: column;
   margin-left:5%;
@@ -13,8 +14,25 @@ img{
   margin-bottom: 1%;
 }
 
+.hero-img-top{
+    height:400px;
+    margin: 10px;
+}
+
 .card-img-top {
   height: 200px;
+}
+
+.info-img-top {
+    height: 200px;
+    width: 300px;
+    display: block;
+    margin: auto;
+}
+
+.icon-image-top {
+    height: 100px;
+    width: 100px;:
 }
 
 .row{
@@ -30,6 +48,7 @@ img{
 .container{
   justify-content: center;
 }
+
 .details{
   font-size: 20px;
   color: rgb(97, 64, 128);
